unpackaged/main/default/objects/Activity/fields/Activity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Close_Date__c</fullName>
    <inlineHelpText>The date the activity was brought to an inactive state..</inlineHelpText>
    <label>Activity Completion Date</label>
    <type>Date</type>
</CustomField>