unpackaged/main/default/objects/Activity/fields/Activity_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_2__c</fullName>
    <description>Custom field to read Activity Type as OOTB Activity Type cannot be used for reporting</description>
    <label>Activity Type 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>