unpackaged/main/default/objects/Activity/fields/Assigned_To_Department__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Department__c</fullName>
    <formula>Owner:User.Department</formula>
    <label>Assigned To Department</label>
    <type>Text</type>
</CustomField>