unpackaged/main/default/objects/Activity/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <label>Activity Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
            <value>
                <fullName>Call Back/Voice Mail</fullName>
            </value>
            <value>
                <fullName>Could not connect</fullName>
            </value>
            <value>
                <fullName>Meeting held</fullName>
            </value>
            <value>
                <fullName>Meeting postponed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>No real opportunity</fullName>
            </value>
            <value>
                <fullName>Returned to Marketing</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>