unpackaged/main/default/objects/Activity/fields/Estimated_Duration__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration__c</fullName>
    <inlineHelpText>Estimated Duration (Days)</inlineHelpText>
    <label>Estimated Duration</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>