unpackaged/main/default/objects/Activity/fields/Executive_Response_Approval__c.field-meta.xml
<CustomField>
    <fullName>Executive_Response_Approval__c</fullName>
    <description>Executive Response team approval details</description>
    <inlineHelpText>Status of the Executive Response team approval for this task</inlineHelpText>
    <label>Executive Response Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>