unpackaged/main/default/objects/Activity/fields/External__c.field-meta.xml
<CustomField>
    <fullName>External__c</fullName>
    <defaultValue>false</defaultValue>
    <description>External Telemarketing Organisation engaged</description>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>