unpackaged/main/default/objects/Activity/fields/inContact_Call_Recording_url__c.field-meta.xml
<CustomField>
    <fullName>inContact_Call_Recording_url__c</fullName>
    <formula>IF( ISBLANK( CallObject ) , &quot;&quot;,  HYPERLINK(&quot;https://au1.nice-incontact.com/search/#/search?searchStr=&quot;  &amp; CallObject &amp; &quot;&amp;page=1&amp;sort=1startTime22&amp;range=7,1548884585522,365,1&quot;, &quot;Recording&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Support Call Recording</label>
    <type>Text</type>
</CustomField>