unpackaged/main/default/objects/Activity/fields/Key_Activities__c.field-meta.xml
<CustomField>
    <fullName>Key_Activities__c</fullName>
    <description>Key Milestone Activities</description>
    <label>Key Activities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal Requested</fullName>
                <color>#0B6FCE</color>
                <label>Proposal Requested</label>
            </value>
            <value>
                <fullName>Proposal Submitted</fullName>
                <color>#78C953</color>
                <label>Proposal Submitted</label>
            </value>
            <value>
                <fullName>Executive Approval</fullName>
                <color>#E27001</color>
                <label>Executive Approval</label>
            </value>
            <value>
                <fullName>Executive Meeting</fullName>
                <color>#A845DC</color>
                <label>Executive Meeting</label>
            </value>
            <value>
                <fullName>Internal Meeting</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
                <color>#F3D904</color>
                <label>Demo</label>
            </value>
            <value>
                <fullName>Reference Checks</fullName>
                <color>#A53711</color>
                <label>Reference Checks</label>
            </value>
            <value>
                <fullName>Contract negotiation</fullName>
                <color>#66E9BD</color>
                <label>Contract negotiation</label>
            </value>
            <value>
                <fullName>Contract Review</fullName>
                <color>#0B24BE</color>
                <label>Contract Review</label>
            </value>
            <value>
                <fullName>Contract signing</fullName>
                <color>#419249</color>
                <label>Contract signing</label>
            </value>
            <value>
                <fullName>Project Initiation</fullName>
                <color>#B6E32E</color>
                <label>Project Initiation</label>
            </value>
            <value>
                <fullName>Implementation Project</fullName>
                <color>#641CCF</color>
                <label>Implementation Project</label>
            </value>
            <value>
                <fullName>Go Live</fullName>
                <color>#F96FB7</color>
                <label>Go Live</label>
            </value>
            <value>
                <fullName>Joint Business Case/Strategy and Roadmap</fullName>
            </value>
            <value>
                <fullName>Consulting Pricing</fullName>
            </value>
            <value>
                <fullName>Provide Initial Pricing and Scope</fullName>
            </value>
            <value>
                <fullName>Cloud Readiness Assessment</fullName>
            </value>
            <value>
                <fullName>Cloud Security Review</fullName>
            </value>
            <value>
                <fullName>Executive Sponsors Meeting</fullName>
            </value>
            <value>
                <fullName>Agreed Transition Project Plan</fullName>
            </value>
            <value>
                <fullName>Decide Contract Method</fullName>
            </value>
            <value>
                <fullName>Finalise Business Case Justification and Pricing</fullName>
            </value>
            <value>
                <fullName>Contract generation - agree legal and execution process</fullName>
            </value>
            <value>
                <fullName>Agency Risk and Compliance Assessment Finalisation</fullName>
            </value>
            <value>
                <fullName>Confirm contract signing process and signatory availability</fullName>
            </value>
            <value>
                <fullName>Cloud Provision</fullName>
            </value>
            <value>
                <fullName>Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>Go Live - Business Case Achieved</fullName>
            </value>
            <value>
                <fullName>CIO sign off</fullName>
            </value>
            <value>
                <fullName>Preferred status confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>