unpackaged/main/default/objects/Activity/fields/Knowledge_Reporting_Tag__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Reporting_Tag__c</fullName>
    <description>Field to Capture Reporting Tag of Article Owner Field for reporting purposes</description>
    <formula>Owner:User.Reporting_Tags__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Knowledge Reporting Tag</label>
    <type>Text</type>
</CustomField>