unpackaged/main/default/objects/Activity/fields/Owner_IsActive__c.field-meta.xml
<CustomField>
    <fullName>Owner_IsActive__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <label>Owner IsActive</label>
    <type>Checkbox</type>
</CustomField>