unpackaged/main/default/objects/Activity/fields/Sales_Task__c.field-meta.xml
<CustomField>
    <fullName>Sales_Task__c</fullName>
    <formula>CreatedBy.Profile.Name = &#39;Sales&#39; ||
CreatedBy.Profile.Name = &#39;Sales Manager&#39;</formula>
    <label>Sales Task</label>
    <type>Checkbox</type>
</CustomField>