unpackaged/main/default/objects/Activity/fields/T1_Executive_Approval__c.field-meta.xml
<CustomField>
    <fullName>T1_Executive_Approval__c</fullName>
    <label>T1 Executive Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>